# aiohttp3

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
server/: pyproject.toml
server/src/: connection.py  db.py
server/src/beers/: create_table.py  main.py  queries.py
src/: db.py
src/beers/: main.py  model.py  queries.py
tests/: test_beers.py
