[tool.poetry]
name = "beers"
version = "0.1.0"
description = ""
authors = ["Toni Chaz <toni.chaz@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
server = "src.beers.main:server"
